--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: shell
 os: windows
-script: echo 'I worked' $valu
+script: echo 'I worked' "valu"
 branches:
   only:
   - master
   - /^deploy-.*$/
+console.log("valu")
