--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ node_js:
     only:
     - master
     - /^deploy-.*$/
-  deploy:
-    provider: codedeploy
+  # deploy:
+  #   provider: codedeploy
     # bucket: "nfwf-tool-production-site"
