--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,11 @@
-# language: shell
-# os: windows
-# script: echo "This sucks"
-# # pie: "pie"
-# branches:
-#   only:
-#   - master
-#   - /^deploy-.*$/
-# deploy:
-#       provider: codedeploy
 language: node_js
 node_js:
   - “stable”
-# before_script:
-#   - npm install -npm build
-  # script: npm test
-  #
-  # before_deploy:
-  #   - 'curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"'
-  #   - 'unzip awscli-bundle.zip'
-  #   - './awscli-bundle/install -b ~/bin/aws'
-  #   - 'export PATH=~/bin:$PATH'
-  #   - 'aws configure'
-  branches:
-    only:
-    - master
-    - /^deploy-.*$/
-  # deploy:
-  #   provider: codedeploy
-    # bucket: "nfwf-tool-production-site"
+deploy:
+    provider: s3
+    access_key_id: $access_key_id
+    secret_access_key: $secret_access_key
+    bucket: anitra
+    acl: public_read
+    local_dir:
+    skip_cleanup: true
