--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - “stable”
 deploy:
     provider: s3
-    access_key_id: $access_key_id
-    secret_access_key: $secret_access_key
+    access_key_id: $access
+    secret_access_key: $secret
     bucket: anitra
     acl: public_read
     local_dir:
