--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - 8.9.4
 deploy:
     provider: s3
+    on:
+      branch: prod
     access_key_id: $access
     secret_access_key: $secret
     bucket: anitra
