--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ deploy:
     secret_access_key: $secret
     bucket: anitra
     acl: public_read
-    local_dir:
+    local_dir: dist
     skip_cleanup: true
